HH-113780 add api